# pytorch-lamin-mnist

./: .gitignore  .pre-commit-config.yaml  README.md  lamin-project.yaml  noxfile.py  pyproject.toml
.github/workflows/: build.yml
docs/: api.md  changelog.md
docs/guide/: index.md  mnist-extend-schema.ipynb  mnist-ingest-local.ipynb  mnist-ingest-remote.ipynb  mnist-intro.ipynb  mnist-local.ipynb  mnist-train.ipynb  quickstart.ipynb
pytorch_lamin_mnist/: __init__.py
tests/: test_base.py
