[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pytorch_lamin_mnist"
authors = [{name = "Lamin Labs", email = "laminlabs@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]
dependencies = [
    "nbproject",
    "lamindb>=0.31.0",
    "torch",
    "torchvision",
    "torchmetrics",
    "pytorch-lightning",
    "Pillow"
]

[project.urls]
Home = "https://github.com/laminlabs/pytorch-lamin-mnist"

[project.optional-dependencies]
dev = [
    "pre-commit",
    "nox",
]
test = [
    "pytest>=6.0",
    "pytest-cov",
]

[tool.black]
preview = true

[tool.pytest.ini_options]
testpaths = [
    "tests",
]

[tool.coverage.run]
omit = [
    "pytorch_lamin_mnist/*",
]
